--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OSINT for Napier Bailiffs</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      href="https://bailiff.on.ca/assets/images/layout/logo.png"
+      type="image/png"
+    />
   </head>
   <body>
     <header>
